--- a/EmpWage/EmpWage/EmpWage.csproj
+++ b/EmpWage/EmpWage/EmpWage.csproj
@@ -44,7 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompanyEmployeeWage.cs" />
-    <Compile Include="EmployeeWageBuilderArray.cs" />
+    <Compile Include="EmployeeWage.cs" />
+    <Compile Include="EmployeeWageBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
